# apcore-mcp-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: README.md  run.py
examples/binding_demo/: run.py
src/apcore_mcp/: __init__.py  __main__.py  _utils.py  _version.py  acl_builder.py  apcore_mcp.py  config.py  constants.py  middleware_builder.py
src/apcore_mcp/adapters/: __init__.py  annotations.py  approval.py  errors.py  formatter.py  id_normalizer.py  schema.py
src/apcore_mcp/auth/: jwt.py  middleware.py  protocol.py
src/apcore_mcp/converters/: openai.py
src/apcore_mcp/explorer/: __init__.py
src/apcore_mcp/inspector/: __init__.py
src/apcore_mcp/server/: async_task_bridge.py  factory.py  router.py  server.py  transport.py
tests/: conftest.py  test_acl.py  test_acl_conformance.py  test_apcore_mcp.py  test_api.py  test_cli.py  test_config.py  test_d4_d9_d10_d11_fixes.py  test_middleware.py  test_middleware_conformance.py  test_observability.py  test_review_fixes.py
tests/adapters/: test_annotations.py  test_errors.py  test_errors_integration.py  test_formatter.py  test_id_normalizer.py  test_schema.py
tests/auth/: test_jwt.py
tests/converters/: test_openai.py
tests/explorer/: test_explorer.py
tests/integration/: test_integration.py
tests/server/: test_async_task_bridge.py  test_factory.py  test_router.py  test_server.py  test_trace_context.py  test_transport.py
